--- a/source/Sass/blocks/_recent.scss
+++ b/source/Sass/blocks/_recent.scss
@@ -31,4 +31,20 @@
     padding-left: 11px;
     padding-right: 25px;
   }
+  &__button {
+    fill: #d1d1d1;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  &__button-left,
+  &__button-right {
+    margin-right: 5px;
+    margin-left: 5px;
+    cursor: pointer;
+    &:hover {
+      fill: $menu-link-hover;
+    }
+  }
 }
