--- a/source/css/style.css
+++ b/source/css/style.css
@@ -585,6 +585,16 @@ body {
     justify-content: space-between;
     padding-left: 11px;
     padding-right: 25px; }
+  .recent__button {
+    fill: #d1d1d1;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; }
+  .recent__button-left, .recent__button-right {
+    cursor: pointer; }
+    .recent__button-left:hover, .recent__button-right:hover {
+      fill: #c7b299; }
 
 .post {
   width: 32%;
