--- a/source/Sass/blocks/_post.scss
+++ b/source/Sass/blocks/_post.scss
@@ -1,11 +1,65 @@
 .post {
+  position: relative;
   width: 32%;
   display: flex;
   flex-direction: column;
   border: 1px solid #f8f8f8;
+  cursor: pointer;
+  &:hover {
+    text-decoration: none;
+    background-color: #362f2d;
+    & > img {
+      opacity: 0.3;
+    }
+    & > :nth-child(2) > :first-child {
+      background-color: $menu-link-hover;
+    }
+    & > :nth-child(2) > :last-child {
+      background-color: #a48d72;
+    }
+    & > :nth-child(3) > h5 {
+      color: $menu-link-hover;
+    }
+    & > :nth-child(3) > p {
+      color: $white;
+    }
+  }
   &__img {
-    width: 370px;
+    width: 100%;
     height: 220px;
+  }
+  &__date {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+  }
+  &__date-day {
+    width: 50px;
+    height: 35px;
+    border-radius: 3px 3px 0 0;
+    background-color: #363636;
+    color: $white;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 0.83;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__date-month {
+    width: 50px;
+    height: 25px;
+    border-radius: 0 0 3px 3px;
+    background-color: #252525;
+    color: $white;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.67;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__body {
     display: flex;
@@ -27,13 +81,24 @@
     font-weight: 300;
     line-height: 1.57;
     padding-top: 5px;
+    padding-right: 2px;
   }
-  &__button {}
+  &__button {
+    display: flex;
+  }
   &__link {
     color: $menu-link-hover;
     font-family: Montserrat;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.43;
+  }
+  &__button-arrow {
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-left-color: $menu-link-hover;
+    margin-top: 7px;
+    margin-left: 7px;
   }
 }
