--- a/source/Sass/blocks/_recent.scss
+++ b/source/Sass/blocks/_recent.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 75px 15% 18px;
+    padding: 87px 15% 18px;
   }
   &__header-title {
     color: #555555;
@@ -27,9 +27,8 @@
   }
   &__wrapper {
     display: flex;
-    justify-content: space-between;
-    padding-left: 11px;
-    padding-right: 25px;
+    justify-content: space-around;
+    padding-bottom: 37px;
   }
   &__button {
     fill: #d1d1d1;
@@ -37,6 +36,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-bottom: 80px;
   }
   &__button-left,
   &__button-right {
