--- a/source/css/style.css
+++ b/source/css/style.css
@@ -565,7 +565,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 75px 15% 18px; }
+    padding: 87px 15% 18px; }
   .recent__header-title {
     color: #555555;
     font-family: Raleway;
@@ -582,28 +582,75 @@ body {
     padding-top: 8px; }
   .recent__wrapper {
     display: flex;
-    justify-content: space-between;
-    padding-left: 11px;
-    padding-right: 25px; }
+    justify-content: space-around;
+    padding-bottom: 37px; }
   .recent__button {
     fill: #d1d1d1;
     cursor: pointer;
     display: flex;
     flex-direction: row;
-    justify-content: center; }
+    justify-content: center;
+    padding-bottom: 80px; }
   .recent__button-left, .recent__button-right {
+    margin-right: 5px;
+    margin-left: 5px;
     cursor: pointer; }
     .recent__button-left:hover, .recent__button-right:hover {
       fill: #c7b299; }
 
 .post {
+  position: relative;
   width: 32%;
   display: flex;
   flex-direction: column;
-  border: 1px solid #f8f8f8; }
+  border: 1px solid #f8f8f8;
+  cursor: pointer; }
+  .post:hover {
+    text-decoration: none;
+    background-color: #362f2d; }
+    .post:hover > img {
+      opacity: 0.3; }
+    .post:hover > :nth-child(2) > :first-child {
+      background-color: #c7b299; }
+    .post:hover > :nth-child(2) > :last-child {
+      background-color: #a48d72; }
+    .post:hover > :nth-child(3) > h5 {
+      color: #c7b299; }
+    .post:hover > :nth-child(3) > p {
+      color: #ffffff; }
   .post__img {
-    width: 370px;
+    width: 100%;
     height: 220px; }
+  .post__date {
+    position: absolute;
+    top: 20px;
+    left: 20px; }
+  .post__date-day {
+    width: 50px;
+    height: 35px;
+    border-radius: 3px 3px 0 0;
+    background-color: #363636;
+    color: #ffffff;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 0.83;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .post__date-month {
+    width: 50px;
+    height: 25px;
+    border-radius: 0 0 3px 3px;
+    background-color: #252525;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.67;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   .post__body {
     display: flex;
     flex-direction: column;
@@ -621,13 +668,23 @@ body {
     font-size: 14px;
     font-weight: 300;
     line-height: 1.57;
-    padding-top: 5px; }
+    padding-top: 5px;
+    padding-right: 2px; }
+  .post__button {
+    display: flex; }
   .post__link {
     color: #c7b299;
     font-family: Montserrat;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.43; }
+  .post__button-arrow {
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-left-color: #c7b299;
+    margin-top: 7px;
+    margin-left: 7px; }
 
 .clients {
   width: 100%;
